--- a/tomcat/northwest/WEB-INF/classes/messages_en_US.properties
+++ b/tomcat/northwest/WEB-INF/classes/messages_en_US.properties
@@ -492,6 +492,8 @@ billSchedule.check10=\u5305\u88dd
 billSchedule.check11=\u51fa\u4ef6
 billSchedule.check12=\u5b8c\u5de5\u4e0a\u50b3
 
+billSchedule.cuticle=\u8b77\u819c
+
 
 bill.form=\u8a02\u55ae\u660e\u7d30
 bill.isAuthority=\u662f\u5426\u5c07"\u8a02\u55ae\u6d41\u7a0b\u8a2d\u5b9a"\u5957\u7528\u81f3"\u8a02\u55ae\u660e\u7d30"
@@ -591,7 +593,8 @@ profit.customer=\u5ba2\u6236
 profit.customer.query=\u67e5\u8a62\u5ba2\u6236\u540d\u7a31/\u7de8\u865f
 profit.Interval=\u5340\u9593
 profit.salesmen=\u696d\u52d9
-profit.Intervaly=\u696d\u52d9
+profit.Intervaly=\u92b7\u8ca8\u65e5\u671f
+profit.discount=\u6298\u8b93\u91d1\u984d
 
 
 profitDetail.item=\u9805\u76ee
@@ -609,6 +612,7 @@ profitDetail.profit=profit
 profitDetail.profitPerc=profitPerc
 profitDetail.project=project
 profitDetail.product=product
+profitDetail.discount=\u6298\u8b93\u91d1\u984d
 
 
 profit.profitProduct=\u7522\u54c1\u5229\u6f64\u5831\u8868
@@ -630,6 +634,7 @@ profit.salesCostAvg=\u5e73\u5747\u6a19\u6e96\u6210\u672c
 profit.sum=\u5229\u6f64\u7e3d\u984d
 profit.beginDate=\u958b\u59cb\u65e5\u671f
 profit.endDate=\u7d50\u675f\u65e5\u671f
+
 
 workEfficiency.result=\u7d71\u8a08\u7d50\u679c
 workEfficiency.member=\u8acb\u8f38\u5165\u4eba\u54e1\u7de8\u865f\u6216\u59d3\u540d
@@ -664,7 +669,15 @@ barcode.status=Barcode\u72c0\u614b
 barcode.complete=\u5b8c\u6210\u6b65\u9a5f
 barcode.uncomplete=\u672a\u5b8c\u6210\u6b65\u9a5f
 barcode.font=\u4e0b\u8f09barcode\u5b57\u578b
+barcode.user.steps=\u6d41\u7a0b\u6b0a\u9650
+barcode.user.allsteps=\u5168\u90e8\u6d41\u7a0b
 
+billQA.list=QA\u6e05\u55ae
+billQA.form=QA\u660e\u7d30
+menu.billQAList=QA\u6e05\u55ae
+menu.billQAForm=QA\u660e\u7d30
+billQA.question=\u5ba2\u6236\u53cd\u61c9\u554f\u984c
+billQA.answer=\u8655\u7406\u65b9\u5f0f
 
 
 
