--- a/tomcat/northwest/WEB-INF/classes/messages_zh_TW.properties
+++ b/tomcat/northwest/WEB-INF/classes/messages_zh_TW.properties
@@ -672,6 +672,13 @@ barcode.font=\u4e0b\u8f09barcode\u5b57\u578b
 barcode.user.steps=\u6d41\u7a0b\u6b0a\u9650
 barcode.user.allsteps=\u5168\u90e8\u6d41\u7a0b
 
+billQA.list=QA\u6e05\u55ae
+billQA.form=QA\u660e\u7d30
+menu.billQAList=QA\u6e05\u55ae
+menu.billQAForm=QA\u660e\u7d30
+billQA.question=\u5ba2\u6236\u53cd\u61c9\u554f\u984c
+billQA.answer=\u8655\u7406\u65b9\u5f0f
+
 
 
 
